# PAA-NOTICES

./: .gitignore  LICENSE  README.md  pyproject.toml  script.py  serp_results.json
newenv/: pyvenv.cfg
src/seo_paa/: __init__.py  cli.py  extractor.py
tests/: test_extractor.py
